fix: z-index

--- a/src/components/select/style/select.less
+++ b/src/components/select/style/select.less
@@ -17,7 +17,6 @@
 
     .icon.close {
       cursor: pointer;
-      z-index: 2021;
     }
 
     &.focus .icon {
@@ -38,7 +37,7 @@
     border-radius: 3px;
     box-shadow: 0 2px 12px 0 rgba(0, 0, 0, .1);
     box-sizing: border-box;
-    z-index: 2021;
+    z-index: 2022;
     background-color: #fff;
 
     &:before {
